# crisp

./: .gitignore  ANTI-TEMPLATES.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  benchmark-report.json  crp.yaml  install.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: validate.yml
.omc/: project-memory.json
.omc/sessions/: 33117a1c-f011-4ce3-96d6-475e67c7cab0.json  3e4ee758-6a35-4593-a2a3-8842f9fc487a.json  8b961be7-b82d-41c0-aaf4-fd3d2c49543c.json  93f2470c-8cf5-44e4-9d97-5857f1359ea0.json  ebf3b6f7-5e9d-40a7-9733-fc47ac015873.json
.omc/state/: agent-replay-55803e15-7075-403e-9550-a362df333595.jsonl  idle-notif-cooldown.json  mission-state.json  subagent-tracking.json
experiment/: analyze.py  calibrate.py  generate-report.py  requirements.txt  run-all.py  run-session.py  scenarios.json  setup-naive.py
experiment/data/aggregated/: validation_results.json
experiment/data/raw/: 2026-04-24_095219_feature_crp_r99.jsonl  2026-04-24_095219_feature_naive_r99.jsonl  test_crp_r99.jsonl  test_naive_r99.jsonl
experiment/reports/: test_report_feature_r99.md  validation_report.md
scripts/: benchmark.py  crp-setup.py  crp_gateway.py  crp_manifest.py  health-check.py  sync-shells.py  token-audit.py
templates/hooks/: session-start.sh
templates/shells/: CLAUDE.md  GEMINI.md
templates/shells/.codex/: instructions.md
templates/skill/: SKILL.md
templates/skill/assets/: .gitkeep
templates/skill/references/: gotchas.md
tests/: conftest.py  test_crp_manifest.py  test_experiment.py  test_health_check.py  test_integration.py
(+11 files in other folders)
