[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp"
version = "2.1.0"
description = "CRP — Context Routing Protocol for AI agent skill orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruamel.yaml>=0.18",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
